# mcm

.github/workflows/: test.yml
mcm/: Dockerfile  kinit.sh  main.py
mcm/automatic_scripts/: flow_all.py  inspect_all.py
mcm/couchdb_layer/: mcm_database.py
mcm/deploy/: action.sh
mcm/json_layer/: request.py
mcm/rest_api/: RequestActions.py
mcm/tests/: README.md  pyproject.toml
mcm/tools/: communicator.py  handlers.py  installer.py
